src-tauri/check_out_2.txt
    Blocking waiting for file lock on build directory
    Checking tauri-appaether v0.1.0 (F:\ControlCenter\src-tauri)
warning: unused import: `Manager`
 --> src\hardware.rs:2:24
  |
2 | use tauri::{AppHandle, Manager};
  |                        ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `PSTR`
 --> src\hardware.rs:3:29
  |
3 | use windows::core::{PCWSTR, PSTR};
  |                             ^^^^

warning: unused import: `QoS`
 --> src\iot.rs:1:56
  |
1 | use rumqttc::{AsyncClient, Event, MqttOptions, Packet, QoS};
  |                                                        ^^^

warning: unused import: `Emitter`
 --> src\bridge.rs:8:24
  |
8 | use tauri::{AppHandle, Emitter};
  |                        ^^^^^^^

warning: unused import: `tokio::sync::broadcast`
 --> src\bridge.rs:9:5
  |
9 | use tokio::sync::broadcast;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `stream::StreamExt`
  --> src\bridge.rs:10:30
   |
10 | use futures::{sink::SinkExt, stream::StreamExt};
   |                              ^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `Qos`
  --> src\iot.rs:46:41
   |
46 |         client.subscribe("sensor/temp", Qos::AtMostOnce).await.ok();
   |                                         ^^^
   |                                         |
   |                                         use of undeclared type `Qos`
   |                                         help: an enum with a similar name exists (notice the capitalization): `QoS`

error[E0433]: failed to resolve: use of undeclared type `Qos`
  --> src\iot.rs:48:43
   |
48 |             .subscribe("sensor/humidity", Qos::AtMostOnce)
   |                                           ^^^
   |                                           |
   |                                           use of undeclared type `Qos`
   |                                           help: an enum with a similar name exists (notice the capitalization): `QoS`

error[E0433]: failed to resolve: use of undeclared type `Qos`
  --> src\iot.rs:51:42
   |
51 |         client.subscribe("sensor/power", Qos::AtMostOnce).await.ok();
   |                                          ^^^
   |                                          |
   |                                          use of undeclared type `Qos`
   |                                          help: an enum with a similar name exists (notice the capitalization): `QoS`

warning: unused import: `sink::SinkExt`
  --> src\bridge.rs:10:15
   |
10 | use futures::{sink::SinkExt, stream::StreamExt};
   |               ^^^^^^^^^^^^^

warning: unused variable: `app`
  --> src\bridge.rs:12:21
   |
12 | pub fn start_server(app: AppHandle) {
   |                     ^^^ help: if this is intentional, prefix it with an underscore: `_app`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `tauri-appaether` (lib) generated 8 warnings
error: could not compile `tauri-appaether` (lib) due to 3 previous errors; 8 warnings emitted
